# hammock

./: .gitignore  README.md  pyproject.toml
hammock/: __init__.py  attr.py  contract.py  control.py  meta.py  patch.py  spec.py  spy.py  util.py
scripts/: check.sh  lint.sh  test.sh
tests/: test_contract.py  test_mock.py
tests/stack/: abstract.py  linear.py
